test/libsolidity/syntaxTests/constructor/returns_in_constructor.sol
contract test {
	constructor() public returns (uint a) { }
}
// ----
// TypeError 9712: (46-54): Non-empty "returns" directive for constructor.
